--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
 </head>
 <body>
     <h1>欢迎观看分享的阿里云盘视频</h1>
-    <iframe src="https://www.aliyundrive.com/s/https://www.alipan.com/s/xsH4Bqe2wPe" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.aliyundrive.com/s/xsH4Bqe2wPe" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
