--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>阿里云盘分享</title>
+    <title>视频展示</title>
     <style>
         body {
             background-color: #f0f0f0;
@@ -13,14 +13,15 @@
         }
         iframe {
             width: 80%;
-            height: 600px;
+            height: 80vh;
             border-radius: 10px;
             box-shadow: 0 0 20px rgba(0,0,0,0.1);
         }
     </style>
 </head>
 <body>
-    <h1>欢迎观看分享的阿里云盘视频</h1>
-    <iframe src="https://www.aliyundrive.com/s/xsH4Bqe2wPe" frameborder="0" allowfullscreen></iframe>
+    <h1>观看视频</h1>
+    <!-- 替换为你的视频链接 -->
+    <iframe src="https://www.alipan.com/s/Gdh1Y9Ps1Fq" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
